# chessNova

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  EVALUATION.md  LICENSE  Makefile  README.md  TODO.md  test_search
.github/workflows/: build.yml
include/: bitboard.h  board.h  defs.h  evaluate.h  kings.h  knights.h  movegen.h  pawns.h  polyglot.h  search.h  sliding.h  types.h  uci.h
src/: bitboard.c  board.c  evaluate.c  kings.c  knights.c  magic.c  main.c  movegen.c  pawns.c  polyglot.c  search.c  sliding.c  test_search.c  uci.c
